Alignment fixes.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -613,3 +613,8 @@ input.middle:focus {
 .padding-bw-cols{
     padding-top:3%;
 }
+.sign-out-box-specs{
+    float: right;
+    right: 2%;
+    top: 20%;
+}
